[tool.poetry]
name = "import-substacks"
version = "0.4.0"
description = ""
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
markdownify = "^0.13.1"
requests = "^2.32.3"
click = "^8.1.7"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
